@@ -759,7 +759,7 @@ $(document).ready(function() {
     });
     $( "#dialog-edittempdevice" ).dialog({
           autoOpen: false,
-          width: 350,
+          width: 450,
           height: 150,
           modal: true,
           resizable: false,
@@ -795,6 +795,10 @@ $(document).ready(function() {
                       });
 
                   }
+              },
+              "Transfer": function() {
+                  $( this ).dialog( "close" );
+                  TransferDevice($.devIdx,ShowTemps);
               },
               Cancel: function() {
                   $( this ).dialog( "close" );
